@@ -72,18 +72,22 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     testOptions.unitTests.includeAndroidResources = true
+    testOptions.unitTests.all {
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions { jvmTarget = "1.8" }
 }
 
 dependencies {
         javadocClasspath 'com.google.auto.value:auto-value-annotations:1.6.6'
 
-        api("com.google.firebase:firebase-common:20.4.2")
-        api("com.google.firebase:firebase-common-ktx:20.4.2")
-        api("com.google.firebase:firebase-components:17.1.5")
+        api("com.google.firebase:firebase-common:21.0.0")
+        api("com.google.firebase:firebase-common-ktx:21.0.0")
+        api("com.google.firebase:firebase-components:18.0.0")
         api('com.google.firebase:firebase-datatransport:18.2.0') {
          exclude group: 'com.google.firebase', module: 'firebase-common'
          exclude group: 'com.google.firebase', module: 'firebase-components'
@@ -136,7 +140,7 @@ dependencies {
         testImplementation "com.google.truth:truth:$googleTruthVersion"
         testImplementation 'junit:junit:4.12'
         testImplementation 'junit:junit:4.13-beta-2'
-        testImplementation 'org.mockito:mockito-core:2.25.0'
+        testImplementation 'org.mockito:mockito-core:5.2.0'
         testImplementation "org.robolectric:robolectric:$robolectricVersion"
 
         testCompileOnly 'com.google.auto.value:auto-value-annotations:1.6.3'
@@ -149,6 +153,6 @@ dependencies {
         androidTestImplementation "androidx.test.ext:junit:$androidxTestJUnitVersion"
         androidTestImplementation "com.google.truth:truth:$googleTruthVersion"
         androidTestImplementation 'junit:junit:4.12'
-        androidTestImplementation 'org.mockito:mockito-core:2.25.0'
-        androidTestImplementation 'org.mockito:mockito-inline:2.25.0'
+        androidTestImplementation 'org.mockito:mockito-core:5.2.0'
+        androidTestImplementation 'org.mockito:mockito-inline:5.2.0'
 }
